deploy/Canary/app-canary.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-forecast-api-canary
  labels:
    app: weather-forecast-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-forecast-api
      track: canary
  template:
    metadata:
      labels:
        app: weather-forecast-api
        track: canary
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "80"
    spec:
      containers:
      - name: weather-forecast-api-canary
        image: "ghcr.io/atrakic/weather-forecast-api:v0.0.5" # change here
        # Disable bellow if using public image
        imagePullPolicy: IfNotPresent # Always # Never
        ports:
        - name: http
          containerPort: 80
        - name: probe
          containerPort: 80 # TODO
        livenessProbe:
          httpGet:
            path: /version # TODO
            port: probe
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /version # TODO
            port: probe
          periodSeconds: 5
