deploy/Canary/app-stable.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-forecast-api-stable
  labels:
    app: weather-forecast-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-forecast-api
      #track: stable
  template:
    metadata:
      labels:
        app: weather-forecast-api
        track: stable
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "80"
    spec:
      containers:
      - name: weather-forecast-api-stable
        image: "ghcr.io/atrakic/weather-forecast-api:v0.0.4" # change here
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        - name: probe
          containerPort: 80 # TODO
        livenessProbe:
          httpGet:
            path: /version # TODO
            port: probe
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /version # TODO
            port: probe
          periodSeconds: 5
