deploy/Canary/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-forecast-api
spec:
  ingressClassName: nginx
  rules:
  - host: weather-forecast-api.local
    http:
      paths:
      - backend:
          service:
            name: weather-forecast-api-canary
            port:
              number: 80
        path: /
        pathType: Prefix
